-
Type:
Bug
-
Resolution: Done
-
Priority:
Minor - P4
-
Affects Version/s: None
-
Component/s: Internal Code, Querying
-
None
-
Fully Compatible
-
ALL
-
None
-
None
-
None
-
None
-
None
-
None
-
None
If one uses await data with a tailable capped collect it will cause shutdown to wait for the timeout of the notifier.
In addition clients will wait too long if a collection is dropped during their wait.
In short, we should notify_all if a collection is dropped/destroyed.