SERVER-20102: notify when collection is destroyed